Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- updated Brazilian Portuguese translations (Thanks to Mario Olimpio de Menezes
  <mario [at] curiango.ipen.br>)
-
Bug fixes:
~~~~~~~~~~
- Notifications : notifyConfirmUnsubscribe() wrong var name
- Fix : SubscriptionContainer.getSusbcriptionById()
- #410: Event configuration form enhancement
- #389: mass notification enable ?
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- SubscriptionsTool.scheduleMessages() return "Notications sent" instead of None
  when everything went well to avoid a 204 error on client side.